[package]
name = "telegram-sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.14.0"
serde_json = "1.0.150"
log = "0.4.33"
env_logger = "0.11.11"
dotenv = "0.15.0"
teloxide = "0.17.0"
surrealdb = "3.2.0"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.103"
thiserror = "2.0.18"
